<resources>
    <string name="app_name">5e Turn Tracker</string>
    <string name="class_select_text">Select Character Class</string>
    <string name="artificer">Artificer</string>
    <string name="barbarian">Barbarian</string>
    <string name="bard">Bard</string>
    <string name="cleric">Cleric</string>
    <string name="druid">Druid</string>
    <string name="fighter">Fighter</string>
    <string name="monk">Monk</string>
    <string name="paladin">Paladin</string>
    <string name="ranger">Ranger</string>
    <string name="rogue">Rogue</string>
    <string name="sorcerer">Sorcerer</string>
    <string name="warlock">Warlock</string>
    <string name="wizard">Wizard</string>
    <string name="race_select_text">Select Character Race</string>
    <string name="aarakoska">Aarakoska</string>
    <string name="aasimar">Aasimar</string>
    <string name="aasimar_fallen">Aasimar (Fallen)</string>
    <string name="aasimar_protecter">Aasimar (Protecter)</string>
    <string name="aasimar_scourge">Aasimar (Scrouge)</string>
    <string name="bugbear">Bugbear</string>
    <string name="centaur">Centaur</string>
    <string name="changeling">Changeling</string>
    <string name="dragonborn">Dragonborn</string>
    <string name="dwarf_duergar">Dwarf (Dreugar)</string>
    <string name="dwarf_hill">Dwarf (Hill)</string>
    <string name="dwarf_mark">Dwarf (Mark of Warding)</string>
    <string name="dwarf_mountain">Dwarf (Mountain)</string>
    <string name="elf_drow">Elf (Drow)</string>
    <string name="elf_eladrin">Elf (Eladrin)</string>
    <string name="elf_high">Elf (High)</string>
    <string name="elf_mark">Elf (Mark of Shadow)</string>
    <string name="elf_sea">Elf (Sea)</string>
    <string name="elf_shadarkai">Elf (Shadar-kai)</string>
    <string name="elf_wood">Elf (Wood)</string>
    <string name="firbolg">Firbolg</string>
    <string name="genasi_air">Genasi (Air)</string>
    <string name="genasi_earth">Genasi (Earth)</string>
    <string name="genasi_fire">Genasi (Fire)</string>
    <string name="genasi_water">Genasi (Water)</string>
    <string name="gith_githyanki">Gith (Githyanki)</string>
    <string name="gith_githzerai">Gith (Githzerai)</string>
    <string name="gnome_deep">Gnome (Deep)</string>
    <string name="gnome_svirfneblin">Gnome (Deep/Svirfneblin)</string>
    <string name="gnome_forest">Gnome (Forest)</string>
    <string name="gnome_mark">Gnome (Mark of Scribing</string>
    <string name="gnome_rock">Gnome (Rock)</string>
    <string name="goblin">Goblin</string>
    <string name="halfelf">Half-Elf</string>
    <string name="halfelf_aquatic">Half-Elf (Aquatic Elf Descent)</string>
    <string name="halfelf_drow">Half-Elf (Drow Descent)</string>
    <string name="halfelf_mark_detection">Half-Elf (Mark of Detection)</string>
    <string name="halfelf_mark_storm">Half-Elf (Mark of Storm)</string>
    <string name="halfelf_moon_sun">Half-Elf (Moon or Sun Elf Descent</string>
    <string name="halfelf_wood">Half-Elf (Wood Elf Descent</string>
    <string name="halforc">Half-Orc</string>
    <string name="halforc_mark_finding">Half-Orc (Mark of Finding)</string>
    <string name="halfling_ghostwise">Halfling (Ghostwise)</string>
    <string name="halfling_lightfoot">Halfling (Lightfoot)</string>
    <string name="halfling_mark_healing">Halfling (Mark of Healing</string>
    <string name="halfling_mark_hospitality">Halfling (Mark of Hospitality</string>
    <string name="halfling_scout">Halfling (Scout)</string>
    <string name="hobgoblin">Hobgoblin</string>
    <string name="human">Human</string>
    <string name="human_variant">Human (Variant)</string>
    <string name="kalashtar">Kalashtar</string>
    <string name="kenku">Kenku</string>
    <string name="kobold">Kobold</string>
    <string name="lizardfolk">Lizardfolk</string>
    <string name="loxodon">Loxodon</string>
    <string name="minotaur">Minotaur</string>
    <string name="orc">Orc</string>
    <string name="shifter_beasthide">Shifter (Beasthide)</string>
    <string name="shifter_longtooth">Shifter (Longtooth)</string>
    <string name="shifter_swiftstride">Shifter (Swiftstride)</string>
    <string name="shifter_wildhunt">Shifter (Wildhunt)</string>
    <string name="simic_hybrid">Simic Hybrid</string>
    <string name="tabaxi">Tabaxi</string>
    <string name="tiefling">Tiefling</string>
    <string name="triton">Triton</string>
    <string name="vedalken">Vedalken</string>
    <string name="verdan">Verdan</string>
    <string name="warforged">Warforged</string>
    <string name="yanti">Yuan-ti Pureblood</string>
    <string name="subclass_select_text">Select Character Subclass</string>
    <string name="alchemist">Alchemist</string>
    <string name="artillerist">Artillerist</string>
    <string name="battle_smith">Battle Smith</string>
    <string name="ancestral_guardian">Ancestral Guardian</string>
    <string name="battlerager">Battlerager</string>
    <string name="berserker">Berserker</string>
    <string name="storm_harald">Storm Harald</string>
    <string name="totem_warrior">Totem Warrior</string>
    <string name="zealot">Zealot</string>
    <string name="glamour">Glamour</string>
    <string name="lore">Lore</string>
    <string name="swords">Swords</string>
    <string name="valor">Valor</string>
    <string name="whispers">Whispers</string>
    <string name="arcana">Arcana</string>
    <string name="death">Death</string>
    <string name="forge">Forge</string>
    <string name="grave">Grave</string>
    <string name="knowledge">Knowledge</string>
    <string name="life">Life</string>
    <string name="light">Light</string>
    <string name="nature">Nature</string>
    <string name="order">Order</string>
    <string name="tempest">Tempest</string>
    <string name="trickery">Trickery</string>
    <string name="war">War</string>
    <string name="dreams">Dreams</string>
    <string name="land">Land</string>
    <string name="moon">Moon</string>
    <string name="shepard">Shepard</string>
    <string name="spores">Spores</string>
    <string name="arcane_archer">Arcane Archer</string>
    <string name="battle_master">Battle Master</string>
    <string name="cavalier">Cavalier</string>
    <string name="champion">Champion</string>
    <string name="eldritch_knight">Eldritch Knight</string>
    <string name="purple_dragon_knight">Purple Dragon Knight</string>
    <string name="samurai">Samurai</string>
    <string name="drunken_master">Drunken Master</string>
    <string name="four_elements">Four Elements</string>
    <string name="kensei">Kensei</string>
    <string name="long_death">Long Death</string>
    <string name="open_hand">Open Hand</string>
    <string name="shadow">Shadow</string>
    <string name="sun_soul">Sun Soul</string>
    <string name="ancients">Ancients</string>
    <string name="conquest">Conquest</string>
    <string name="crown">Crown</string>
    <string name="devotion">Devotion</string>
    <string name="oathbreaker">Oathbreaker</string>
    <string name="redemption">Redemption</string>
    <string name="vengeance">Vengeance</string>
    <string name="beast_master">Beast Master</string>
    <string name="gloom_stalker">Gloom Stalker</string>
    <string name="horizon_walker">Horizon Walker</string>
    <string name="hunter">Hunter</string>
    <string name="monster_slayer">Monster Slayer</string>
    <string name="arcane_trickster">Arcane Trickster</string>
    <string name="assassin">Assassin</string>
    <string name="inquisitive">Inquisitive</string>
    <string name="mastermind">Mastermind</string>
    <string name="scout">Scout</string>
    <string name="swashbuckler">Swashbuckler</string>
    <string name="thief">Thief</string>
    <string name="divine_soul">Divine Soul</string>
    <string name="draconic">Draconic</string>
    <string name="sorc_shadow">Shadow</string>
    <string name="storm">Storm</string>
    <string name="wild">Wild</string>
    <string name="archfey">Archfey</string>
    <string name="celestial">Celestial</string>
    <string name="fiend">Fiend</string>
    <string name="great_old_one">Great Old One</string>
    <string name="hexblade">Hexblade</string>
    <string name="undying">Undying</string>
    <string name="abjuration">Abjuration</string>
    <string name="bladesinging">Bladesinging</string>
    <string name="conjuration">Conjuration</string>
    <string name="divination">Divination</string>
    <string name="enchantment">Enchantment</string>
    <string name="evocation">Evocation</string>
    <string name="illusion">Illusion</string>
    <string name="necromancy">Necromancy</string>
    <string name="feat_select_text">Select Character Feats</string>
    <string name="aberrant_dragonmark">Aberrant Dragonmark</string>
    <string name="actor">Actor</string>
    <string name="alert">Alert</string>
    <string name="athlete">Athlete</string>
    <string name="bountiful_luck">Bountiful Luck</string>
    <string name="charger">Charger</string>
    <string name="crossbow_expert">Crossbow Expert</string>
    <string name="defensive_duelist">Defensive Duelist</string>
    <string name="dragon_fear">Dragon Fear</string>
    <string name="dragon_hide">Dragon Hide</string>
    <string name="drow_high_magic">Drow High Magic</string>
    <string name="dual_wielder">Dual Wielder</string>
    <string name="dungeon_delver">Dungeon Delver</string>
    <string name="durable">Durable</string>
    <string name="dwarven_fortitude">Dwarven Fortitude</string>
    <string name="elemental_adept">Elemental Adept</string>
    <string name="elven_accuracy">Elven Accuracy</string>
    <string name="fade_away">Fade Away</string>
    <string name="fey_teleportation">Fey Teleportation</string>
    <string name="flames_phlegethos">Flames of Phlegethos</string>
    <string name="grappler">Grappler</string>
    <string name="great_weapon_master">Great Weapon Master</string>
    <string name="healer">Healer</string>
    <string name="heavily_armored">Heavily Armored</string>
    <string name="heavy_armor_master">Heavy Armor Master</string>
    <string name="infernal_constitution">Infernal Constitution</string>
    <string name="inspiring_leader">Inspiring Leader</string>
    <string name="keen_mind">Keen Mind</string>
    <string name="lightly_armored">Lightly Armored</string>
    <string name="linguist">Linguist</string>
    <string name="lucky">Lucky</string>
    <string name="mage_slayer">Mage Slayer</string>
    <string name="magic_initiate">Magic Initiate</string>
    <string name="martial_adept">Martial Adept</string>
    <string name="medium_armor_master">Medium Armor Master</string>
    <string name="mobile">Mobile</string>
    <string name="moderately_armored">Moderately Armored</string>
    <string name="mounted_combatant">Mounted Combatant</string>
    <string name="observant">Observant</string>
    <string name="orcish_fury">Orcish Fury</string>
    <string name="polearm_master">Polearm Master</string>
    <string name="prodigy">Prodigy</string>
    <string name="resilient">Resilient</string>
    <string name="revenant_blade">Revenant Blade</string>
    <string name="ritual_caster">Ritual Caster</string>
    <string name="savage_attacker">Savage Attacker</string>
    <string name="second_chance">Second Chance</string>
    <string name="sentinel">Sentinel</string>
    <string name="sharpshooter">Sharpshooter</string>
    <string name="shield_master">Shield Master</string>
    <string name="skilled">Skilled</string>
    <string name="skulker">Skulker</string>
    <string name="spell_sniper">Spell Sniper</string>
    <string name="squat_nimbleness">Squat Nimbleness</string>
    <string name="svirfneblin_magic">Svirfneblin Magic</string>
    <string name="tavern_brawler">Tavern Brawler</string>
    <string name="tough">Tough</string>
    <string name="war_caster">War Caster</string>
    <string name="weapon_master">Weapon Master</string>
    <string name="wood_elf_magic">Wood Elf Magic</string>
</resources>